@@ -1,6 +1,8 @@
 /*
  *  Copyright (C) 2011 - 2024 Arnaud Quette (Design and part of implementation)
- *  Copyright (C) 2011-2021 - EATON
+ *  Copyright (C) 2011 - 2021 EATON
+ *  Copyright (C) 2016 - 2021 Jim Klimov <EvgenyKlimov@eaton.com>
+ *  Copyright (C) 2022 - 2024 Jim Klimov <jimklimov+nut@gmail.com>
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -21,7 +23,8 @@
     \brief init functions for nut scanner library
     \author Frederic Bohe <fredericbohe@eaton.com>
     \author Arnaud Quette <ArnaudQuette@Eaton.com>
-	\author Arnaud Quette <arnaudquette@free.fr>
+    \author Arnaud Quette <arnaudquette@free.fr>
+    \author Jim Klimov <jimklimov+nut@gmail.com>
 */
 
 #include "common.h"
@@ -38,10 +41,13 @@
 #define SOEXT ".dll"
 #endif
 
+/* Flags for code paths we can support in this run (libs available or not
+ * needed). For consistency, only set non-zero values via nutscan_init() call.
+ */
 int nutscan_avail_avahi = 0;
 int nutscan_avail_ipmi = 0;
-int nutscan_avail_nut = 0;
-int nutscan_avail_nut_simulation = 1;
+int nutscan_avail_nut = 0;	/* aka oldnut detection via libupsclient compared to avahi as newnut */
+int nutscan_avail_nut_simulation = 0;
 #ifdef WITH_SNMP_STATIC
 int nutscan_avail_snmp = 1;
 #else
@@ -363,7 +369,7 @@ void nutscan_init(void)
 
 /* start of "NUT Simulation" - unconditional */
 /* no need for additional library */
-	nutscan_avail_nut = 1;
+	nutscan_avail_nut_simulation = 1;
 
 }
 
